fix reduced motion and animations on smaller screens

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -301,14 +301,6 @@ footer {
     left: -0.15em;
     transition: all .3s ease-out;
     z-index: -1;
-
-    @media (max-width: 450px) {
-      transition: none;
-    }
-
-    @media (prefers-reduced-motion: reduce) {
-      transition: none;
-    }
   }
 
   &:hover::after {
@@ -368,18 +360,22 @@ footer {
     left: 0;
     transition: all 0.4s ease-in-out;
     z-index: -1;
-
-    @media (max-width: 450px) {
-      transition: none;
-    }
-
-    @media (prefers-reduced-motion: reduce) {
-      transition: none;
-    }
   }
 
   &:hover::after {
     width: 100%;
+  }
+}
+
+@media (max-width: 450px) {
+  .link::after, .link-work::after {
+    transition: none;
+  }
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .link::after, .link-work::after {
+    transition: none;
   }
 }
 
